# fastapi-ai-backend-template

./: .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
misc/: logger_no_webhook.py  logger_simplefied.py
notes/: backend_generic_structure.md  logger-readme.md
src/JustAbackEnd/: main.py
src/JustAbackEnd/ai_engine/: model.py  prompts.py
src/JustAbackEnd/api/: dependencies.py  exceptions.py  middleware.py  schemas.py
src/JustAbackEnd/api/routers/: health.py  llm.py
src/JustAbackEnd/bootstrap/: app_factory.py  lifespan.py
src/JustAbackEnd/core/: constants.py  logger.py  runtime.py  settings.py
src/JustAbackEnd/services/: llm_service.py
src/JustAbackEnd/utils/: helpers.py
