[project]
name = "JustAbackEnd"
version = "0.1.0"
description = "Production-ready FastAPI backend template for AI applications"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.2",
    "httpx>=0.28.1",
    "langchain>=1.2.9",
    "langchain-google-genai",
    "orjson",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
]


[dependency-groups]
dev = ["ipykernel>=6.30.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/JustAbackEnd"]
